lab3/lab3-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  tls:
  - hosts:
      - lab3-frontend-knyshev.edu
    secretName: lab3-tls
  rules:
  - host: lab3-frontend-knyshev.edu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
